force-app/main/default/objects/NCMT_HelpContent__c/NCMT_HelpContent__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>NCMT Help Content in google docs</description>
    <label>NCMT_HelpContent</label>
</CustomObject>