force-app/main/default/objects/NCMT_HelpContent__c/fields/NCMT_Help_Site__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Help_Site__c</fullName>
    <label>NCMT Help Site</label>
    <type>Url</type>
</CustomField>