force-app/main/default/objects/NCMT_HelpContent__c/fields/NCMT_Help_Site_New_Construction_Oth__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Help_Site_New_Construction_Oth__c</fullName>
    <label>NCMT Help Site New Construction Oth</label>
    <type>Url</type>
</CustomField>