force-app/main/default/objects/NCMT_HelpContent__c/fields/NCMT_Help_Site_Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Help_Site_Professional_Services__c</fullName>
    <label>NCMT Help Site Professional Services</label>
    <type>Url</type>
</CustomField>