force-app/main/default/objects/NCMT_HelpContent__c/fields/NCMT_Help_Site_RA_Parametric__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Help_Site_RA_Parametric__c</fullName>
    <label>NCMT Help Site RA Parametric</label>
    <type>Url</type>
</CustomField>