force-app/main/default/objects/NCMT_HelpContent__c/fields/NCMT_Help_Site_RA_WorkItem_Detail__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Help_Site_RA_WorkItem_Detail__c</fullName>
    <label>NCMT Help Site RA WorkItem Detail</label>
    <type>Url</type>
</CustomField>